--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 attrs==23.2.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
-certifi==2024.2.2
+certifi==2024.7.4
 charset-normalizer==3.3.2
 et-xmlfile==1.1.0
 h11==0.14.0
 idna==3.7
-openpyxl==3.1.2
+openpyxl==3.1.5
 outcome==1.3.0.post0
 PySocks==1.7.1
 python-dotenv==1.0.1
-requests==2.32.2
-selenium==4.21.0
+requests==2.32.3
+selenium==4.23.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
-trio==0.25.1
+trio==0.26.0
 trio-websocket==0.11.1
-typing_extensions==4.11.0
+typing_extensions==4.12.2
 urllib3==2.2.2
+websocket-client==1.8.0
 wsproto==1.2.0
